--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-   <!doctype html>
-  <html>
-  <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatiable" content="ie=edge">
-<link rel="stylesheet" href="./style.css"/>
-<title> Rock Paper and scissors</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatiable" content="ie=edge">
+   <link rel="stylesheet" href="./style.css"/>
+    <title> Rock Paper and scissors</title>
 </head>
 <body>
-    <section class="game">
+     <section class="game">
         <div class="score">
-            <div class="player-score">
+        <div class="player-score">
                 <h2>Player</h2>
                 <p>0</p>
             </div>
@@ -19,22 +19,22 @@
             <p>0</p>
         </div></div>
         <div class="intro">
-<h1>Rock Paper and Scissors</h1>
-<button>Let's Play</button>
+       <h1>Rock Paper and Scissors</h1>
+       <button>Let's Play</button>
 </div>
 <div class="match fadeOut">
-    <h2 class="winner"> Choose an option</h2>
-    <div class="hands">
+     <h2 class="winner"> Choose an option</h2>
+<div class="hands">
         <img class="player-hand" src="./assets/rock.png" alt="">
         <img class="computer-hand" src="./assets/rock.png" alt="">
   
-    </div>
-    <div class="options">
+</div>
+<div class="options">
         <button class="rock">rock</button>
         <button class="paper">paper</button>
         <button class="scissors">scissors</button>
-    </div>
 </div>
-    </section>
+</div>
+</section>
    <script src="rock.js"></script>
-    </body></html>
+</body></html>
