--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
      <section class="game">
         <div class="score">
-        <div class="player-score">
+         <div class="player-score">
                 <h2>Player</h2>
                 <p>0</p>
             </div>
@@ -19,12 +19,12 @@
             <p>0</p>
         </div></div>
         <div class="intro">
-       <h1>Rock Paper and Scissors</h1>
-       <button>Let's Play</button>
-</div>
-<div class="match fadeOut">
-     <h2 class="winner"> Choose an option</h2>
-<div class="hands">
+             <h1>Rock Paper and Scissors</h1>
+        <button>Let's Play</button>
+       </div>
+     <div class="match fadeout">
+         <h2 class="winner"> Choose an option</h2>
+    <div class="hands">
         <img class="player-hand" src="./assets/rock.png" alt="">
         <img class="computer-hand" src="./assets/rock.png" alt="">
   
